--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.wanghongfei</groupId>
+    <groupId>com.wanghongfei</groupId>
     <artifactId>spring-boot-starter-nettyweb</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.0</version>
 
     <dependencyManagement>
         <dependencies>
