--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     </dependencies>
 
     <build>
+        <finalName>springboot-starter-nettyweb</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
